--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/react-redux": "^7.1.25",
     "eslint-config-next": "13.1.6",
     "eslint-plugin-react-hooks": "^4.6.0",
     "next": "13.1.6",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
