--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/react-redux": "^7.1.25",
+    "axios": "^1.3.3",
     "eslint-config-next": "13.1.6",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "final-form": "^4.20.9",
     "next": "13.1.6",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-final-form": "^6.5.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
