--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-config-next": "13.1.6",
     "eslint-plugin-react-hooks": "^4.6.0",
     "final-form": "^4.20.9",
-    "next": "13.1.6",
+    "next": "^13.1.6",
+    "next-pwa": "^5.6.0",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
